Small format fix

--- a/_posts/2017-06-19-linear-types-101.md
+++ b/_posts/2017-06-19-linear-types-101.md
@@ -89,6 +89,6 @@ Running `timetravel`:
 **** Exception: temp: hGetLine: illegal operation (handle is closed)`
 {% endhighlight %}
 
-Yikes! The point of a strong type system is to get rid of pesky runtime errors, but the streaming library makes it possible (even though we can _mostly_ blame it on `IO`). The underlying problem is that old stream references _repeat_ their monadic action when called, meaning that *any* action can be repeated again, leading to almost arbitrary results if one is not careful. This is *not* limited to IO, but applies to *any* monadic action. How could we eliminate this problem?
+Yikes! The point of a strong type system is to get rid of pesky runtime errors, but the streaming library makes it possible (even though we can _mostly_ blame it on `IO`). The underlying problem is that old stream references _repeat_ their monadic action when called, meaning that *any* action can be repeated again, leading to almost arbitrary results if one is not careful. This is **not** limited to IO, but applies to **any** monadic action! How could we eliminate this problem?
 
 With linear types of course! This is a perfect example of where non-linearity can lead to errors, even in a setting as strict as Haskell, if one is not careful. If the `streaming` combinators would return linear stream references, errors like this would be caught at compile time; coincidentally this is *exactly* what I will be doing for the rest of the summer! 
