Clarify code example

--- a/_posts/2017-06-19-linear-types-101.md
+++ b/_posts/2017-06-19-linear-types-101.md
@@ -47,7 +47,7 @@ since we do not know if there are other references to this array when we update 
 update :: Arr a ⊸ Arr a
 {% endhighlight %}
 
-the type system _guarantees_ us that there is only one reference to the incoming array, this one! That means we could implement destructive updates (change the allocated memory in-place) _safely_, which is splendid since it is both faster and does not require garabage collection since there is always only one reference to the array.
+the type system _guarantees_ us that there is only one reference to the incoming array, this one! That means we could implement destructive updates (change the allocated memory in-place) _safely_, which is splendid since it is both faster and does not require garbage collection since there is always only one reference to the array.
 
 
 Relevance to streams
@@ -60,8 +60,8 @@ import System.IO
 import Control.Monad.Trans
 import Streaming.Prelude
 
-f :: Stream (Of (IO String)) IO ()
-f = do
+streamTwoLines :: Stream (Of (IO String)) IO ()
+streamTwoLines = do
     -- open up a file handle
     h <- lift $ openFile "temp" ReadMode 
     -- stream two lines
@@ -72,13 +72,14 @@ f = do
 
 
 timetravel = do
-    Right (v1, s) <- next f  
+    -- s here is the rest of the stream
+    Right (v1, s) <- next streamTwoLines
     Right (v2, s') <- next s
     -- Stream is done, so the next 'next' will close the file
     Left () <- next s'
     
     -- but we still have a reference to the old state...
-    Right (v3, _) <- next s
+    Right (v3, _) <- next s -- note the same s here, 'next':ed again
     v3 >>= putStrLn
     putStrLn "Succesful streaming without runtime errors"
 {% endhighlight %}
@@ -89,6 +90,8 @@ Running `timetravel`:
 **** Exception: temp: hGetLine: illegal operation (handle is closed)`
 {% endhighlight %}
 
-Yikes! The point of a strong type system is to get rid of pesky runtime errors, but the streaming library makes it possible (even though we can _mostly_ blame it on `IO`). The underlying problem is that old stream references _repeat_ their monadic action when called, meaning that *any* action can be repeated again, leading to almost arbitrary results if one is not careful. This is **not** limited to IO, but applies to **any** monadic action! This means that whatever you can do with a monad, `streaming` could repeat where you least expect it. How could we eliminate this problem?
+Yikes! The point of a strong type system is to get rid of pesky runtime errors, but the streaming library makes it possible (even though we can _mostly_ blame it on `IO`). 
+
+The underlying problem is that old stream references _repeat_ their monadic action when called, meaning that *any* action can be repeated again, leading to almost arbitrary results if one is not careful. This is **not** limited to IO, but applies to **any** monadic action! This means that whatever you can do with a monad, `streaming` could repeat where you least expect it. How could we eliminate this problem?
 
 With linear types of course! This is a perfect example of where non-linearity can lead to errors, even in a setting as strict as Haskell, if one is not careful. If the `streaming` combinators would return linear stream references, errors like this would be caught at compile time; coincidentally this is *exactly* what I will be doing for the rest of the summer! 
