Remove backslash, confused by MD escapes :p

--- a/_posts/2017-06-19-linear-types-101.md
+++ b/_posts/2017-06-19-linear-types-101.md
@@ -22,7 +22,7 @@ id x = x
 
 -- and so does this
 twiceWithFive :: Int -> (Int, Int)
-twiceWithFive x = (x\*2, 5)
+twiceWithFive x = (x*2, 5)
 {% endhighlight %}
 
 This consumption requirement is explicitly indicated with a linear function arrow: `⊸`, also called _lollipop_. This is also what is used in the [Tweag I/O GHC fork](https://github.com/tweag/ghc/tree/linear-types), which extends the type system to check for correct multiplicity when such arrows are used, in a backward compatible way. In my [bachelor thesis](https://github.com/m0ar/lollipop) we weren't as clever and split the type universe into linear and non-linear counterparts and did checks this way, which made it much more difficult to use in practice since we couldn't write functions compatible with both.
