Add clarifications, fix links and add another example

--- a/_posts/2017-06-19-linear-types-101.md
+++ b/_posts/2017-06-19-linear-types-101.md
@@ -3,7 +3,7 @@ layout: post
 title: Linear types 101 and its relevance to streams
 ---
 
-Linear types is closely related to linear logic, where the idea of value consumption is introduced, meaning a value is only valid for one use. In the 90's, this was found a neat way to represent finite resources which is very interesting for programming languages; this viewpoint is well explained [here](https://en.wikipedia.org/wiki/Substructural_type_system#Linear_type_systems).
+Linear types is closely related to linear logic, where the idea of value consumption is introduced, meaning a value is only valid for one use. In the 90's, this was found a neat way to represent finite resources which is very interesting for programming languages; this viewpoint is well explained [here](https://en.wikipedia.org/w/index.php?title=Substructural_type_system&oldid=770507992#Linear_type_systems).
 
 In practice, this whole idea builds on the rule a value of a linear type has to be used _exactly once_:
 
@@ -47,13 +47,14 @@ since we do not know if there are other references to this array when we update 
 update :: Arr a ⊸ Arr a
 {% endhighlight %}
 
-the type system _guarantees_ us that there is only one reference to the incoming array, this one! That means we could implement destructive updates (change the allocated memory in-place) _safely_, which is splendid since it is both faster and does not require garbage collection since there is always only one reference to the array.
+and only allow linear operations on the arrays, the type system _guarantees_ us that there is only one reference to the incoming array, this one! That means we could implement destructive updates (change the allocated memory in-place) _safely_, which is splendid since it is both faster and does not require garbage collection since there is always only one reference to the array.
 
 
 Relevance to streams
 --------------------
 
-With effectful streams (where the stream elements perform effects in some monad), access to old stream states can result in _really_ wonky behaviour. Consider this example:
+With effectful streams (which here refers to the [streaming](https://hackage.haskell.org/package/streaming-0.1.4.5) library), the stream elements perform effects in some monad, and access to old stream states can result in _really_ wonky behaviour. Consider this example:
+
 
 {% highlight haskell %}
 import System.IO 
@@ -95,3 +96,32 @@ Yikes! The point of a strong type system is to get rid of pesky runtime errors, 
 The underlying problem is that old stream references _repeat_ their monadic action when called, meaning that *any* action can be repeated again, leading to almost arbitrary results if one is not careful. This is **not** limited to IO, but applies to **any** monadic action! This means that whatever you can do with a monad, `streaming` could repeat where you least expect it. How could we eliminate this problem?
 
 With linear types of course! This is a perfect example of where non-linearity can lead to errors, even in a setting as strict as Haskell, if one is not careful. If the `streaming` combinators would return linear stream references, errors like this would be caught at compile time; coincidentally this is *exactly* what I will be doing for the rest of the summer! 
+
+
+Further example of vulnerability
+-----------------------------
+
+The example from above can be modified to read _the whole file_, from a stream only containing two lines. This is because the monadic action at the head of `s` reads a line from that file, and since we didn't close the file handle (by calling `next` again on `s'`) we can keep grabbing lines by repeating that action.
+
+{% highlight haskell %}
+infRead = do
+    Right (v1, s) <- next f  
+    Right (v2, s') <- next s
+    v1 >>= putStrLn
+    v2 >>= putStrLn
+    forever $ do
+        Right (secret, _) <- next s
+        secret >>= putStrLn
+{% endhighlight %}
+
+Running `infRead`:
+
+{% highlight haskell %}
+a b c
+d e f
+secret line 1
+secret line 2
+*** Exception: temp: hGetLine: end of file
+{% endhighlight %}
+
+
